# Copyright (C) 2005  OPEN CASCADE, CEA, EDF R&D, LEG
#           PRINCIPIA R&D, EADS CCR, Lip6, BV, CEDRAT
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either 
# version 2.1 of the License.
# 
# This library is distributed in the hope that it will be useful 
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU 
# Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public  
# License along with this library; if not, write to the Free Software 
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
# 
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
# 
# -* Makefile *- 
#
# Author : Guillaume Boulant (CSSI)
# Module : KERNEL 
# $Header$
#

include $(top_srcdir)/adm_local/unix/make_common_starter.am

#
# ===============================================================
# Files to be installed
# ===============================================================
#

DEPRECATED_FILES=\
plot2d_settings.png \
view_fitall.png \
cascade.png \
plot2d_fitarea.png \
view_reset.png \
save.png \
view_back.png \
plot2d_linear_y.png \
plot2d_legend.png \
paste.png \
plot2d_fitall.png \
view_bottom.png \
plot2d_log_y.png \
plot2d_log.png \
view_triedre.png \
view_glpan.png \
new.png \
copy.png \
plot2d_linear.png \
reset.png \
plot2d_points.png \
view_front.png \
view_rotate.png \
open.png \
close.png \
view_fitarea.png \
view_top.png \
view_camera_dump.png \
plot2d_pan.png \
view_left.png \
view_zoom.png \
view_right.png \
plot2d_lines.png \
plot2d_splines.png \
plot2d_zoom.png \
view_pan.png \
print.png \
help.png

dist_salomeres_DATA=\
default.png \
uc_new.png \
uc_add.png \
select1.png \
dl_delete.png \
dl_moveup.png \
home.xpm \
forward.xpm \
Tools_en.xml \
plot2d_dump.png \
uc_clear.png \
dl_movedown.png \
back.xpm \
uc_del.png \
uc_current.png \
tile.png \
dl_insert.png \
channel.cfg \
$(DEPRECATED_FILES)

EXTRA_DIST+= Tools_fr.xml
